crates/pg_syntax/tests/snapshots/postgres_regress/guc@164.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT current_user = 'regress_guc_user';"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    AExpr@7..40
      SqlvalueFunction@7..19
        CurrentUser@7..19 "current_user"
      Whitespace@19..20 " "
      Ascii61@20..21 "="
      Whitespace@21..22 " "
      AConst@22..40
        Sconst@22..40 "'regress_guc_user'"
  Ascii59@40..41 ";"

