crates/pg_syntax/tests/snapshots/postgres_regress/guc@168.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create schema not_there_initially;
---
CreateSchemaStmt@0..34
  Create@0..6 "create"
  Whitespace@6..7 " "
  Schema@7..13 "schema"
  Whitespace@13..14 " "
  Ident@14..33 "not_there_initially"
  Ascii59@33..34 ";"

