crates/pg_syntax/tests/snapshots/postgres_regress/guc@171.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select current_schemas(false);
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    FuncCall@7..28
      Ident@7..22 "current_schemas"
      Ascii40@22..23 "("
      AConst@23..28
        FalseP@23..28 "false"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

