crates/pg_syntax/tests/snapshots/postgres_regress/guc@177.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select report_guc('work_mem'), current_setting('work_mem');"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    FuncCall@7..28
      Ident@7..17 "report_guc"
      Ascii40@17..18 "("
      AConst@18..28
        Sconst@18..28 "'work_mem'"
  Ascii41@28..29 ")"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ResTarget@31..57
    FuncCall@31..57
      Ident@31..46 "current_setting"
      Ascii40@46..47 "("
      AConst@47..57
        Sconst@47..57 "'work_mem'"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

