crates/pg_syntax/tests/snapshots/postgres_regress/guc@189.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select myfunc(0);
---
SelectStmt@0..17
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..15
    FuncCall@7..15
      Ident@7..13 "myfunc"
      Ascii40@13..14 "("
      AConst@14..15
        Iconst@14..15 "0"
  Ascii41@15..16 ")"
  Ascii59@16..17 ";"

