crates/pg_syntax/tests/snapshots/postgres_regress/guc@190.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select current_setting('work_mem');"
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..33
    FuncCall@7..33
      Ident@7..22 "current_setting"
      Ascii40@22..23 "("
      AConst@23..33
        Sconst@23..33 "'work_mem'"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

