crates/pg_syntax/tests/snapshots/postgres_regress/guc@196.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select current_setting('nosuch.setting');"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..22 "current_setting"
      Ascii40@22..23 "("
      AConst@23..39
        Sconst@23..39 "'nosuch.setting'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

