crates/pg_syntax/tests/snapshots/postgres_regress/guc@197.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select current_setting('nosuch.setting', false);"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..46
    FuncCall@7..46
      Ident@7..22 "current_setting"
      Ascii40@22..23 "("
      AConst@23..39
        Sconst@23..39 "'nosuch.setting'"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..46
        FalseP@41..46 "false"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

