crates/pg_syntax/tests/snapshots/postgres_regress/guc@202.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select func_with_bad_set();
---
SelectStmt@0..27
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..24
    FuncCall@7..24
      Ident@7..24 "func_with_bad_set"
  Ascii40@24..25 "("
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

